examples/test/testpolicy10328.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10328
  namespace: namespace199
spec:
  podSelector:
    matchLabels:
      key46: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value31
          key16: value29
      podSelector:
        matchLabels:
          key23: value33
          key14: value21
          key0: value38
